<resources>
    <string name="app_name">Android Concepts</string>
    <string name="password_reset_dialog_msg">Please Enter valid Email ID to get Reset Password Link.</string>
    <string name="hello_blank_fragment">Fragment to Fragment Communication</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <!--<string name="razorpay_key_id">rzp_live_R6yACqcQ9xZ1dr</string>
        <string name="razorpay_secret_key">TTjWMV6Oo24YSy8DvaSfw7pN</string>-->
    <string name="razorpay_key_id">rzp_test_pjKEr5RfPJmDic</string>
    <string name="razorpay_secret_key">RSJvs2i0P0oDdjjzaAAzQ0WG</string>
    <string name="txtVw_contntProvdrsHeading">Fetching Mobile Contacts Using Content Providers</string>
    <string name="login">LOGIN</string>


    <string name="facebook_app_id">1772949923045747</string>
    <string name="fb_login_protocol_scheme">fb1772949923045747</string>
    <string name="facebook_client_token">322c0d774904131e11505f1ddbd402e9</string>

    <string name="my_total_android_concepts">My Total Android Concepts..</string>
    <string name="no_internet_connection">No Internet Connection..!</string>
    <string name="please_check_your_network_connectivity_and_come_again"><![CDATA[Please Check your Network Connectivity & Come again..]]></string>
    <string name="welcome_to_android_concepts">Welcome To Android Concepts..</string>
    <string name="welcome_back">Welcome Back…</string>
    <string name="android_concepts">Android Concepts</string>
    <string name="retrofit_get_data">Retrofit Get Data</string>
    <string name="contacts_cntprvds">Contacts_CntPrvds</string>
    <string name="services">Services</string>
    <string name="recylr_retrofit">Recylr Retrofit</string>
    <string name="more_items">More items</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="volley_json_db">Volley Json DB</string>
    <string name="_9_patch_image">9 Patch Image</string>
    <string name="custom_views">Custom Views</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="live_payments">Live Payments</string>
    <string name="pagination_retro_rcyclr">Pagination Retro_Rcyclr</string>
    <string name="view_pager">View Pager</string>
    <string name="ertugrul_ghazi">Ertugrul Ghazi</string>
    <string name="true_story_of_ottoman_empire_wch_inspires_many_in_world">True story of Ottoman Empire wch inspires many in world.</string>
    <string name="_10_10">10/10</string>
    <string name="id">ID</string>
    <string name="movie">Movie</string>
    <string name="details">DETAILS</string>
    <string name="imdb">IMDB</string>
    <string name="movie_with_colon">Movie :</string>
    <string name="present_data">Present Data</string>
    <string name="please_enter_new_movie_name">Please enter New Movie name..</string>
    <string name="movie_details">Movie Details :</string>
    <string name="please_enter_new_movie_details">Please enter New Movie details</string>
    <string name="movie_imdb">Movie IMDB:</string>
    <string name="please_update_new_movie_imdb">Please update New Movie IMDB</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="click_me_to_add_movie_details">Click me to add Movie Details</string>
    <string name="admob_view">AdMob View</string>
    <string name="get_img">Get Img</string>
    <string name="dail_number">Dail Number</string>
    <string name="google_maps">Google Maps</string>
    <string name="web_page">Web Page</string>
    <string name="video_title">Video Title</string>
    <string name="browse_videos">Browse Videos</string>
    <string name="enter_video_title">Enter Video Title..</string>
    <string name="upload_videos">Upload Videos</string>
    <string name="website_with_colon">Website:</string>
    <string name="company">Company</string>
    <string name="id_with_colon">ID: &#160;</string>
    <string name="broadcast_receivers">Broadcast Receivers</string>
    <string name="brdcstrcvr_btn">BrdcstRcvr Btn</string>
    <string name="_9_patch_img_process">9 Patch Img Process</string>
    <string name="notification_will_trigger_in_ammijaan_s_mobile_bcoz_had_given_that_devicetoken_in_code">(Notification will trigger in Ammijaan\'s Mobile bcoz had given that deviceToken in Code.)</string>
    <string name="bound_service_with_mvvm_pattern">Bound Service with MVVM pattern</string>
    <string name="start">Start</string>
    <string name="notification_btn">Notification Btn</string>
    <string name="fcm_notification_service">FCM Notification Service</string>
    <string name="service_off">Service OFF</string>
    <string name="service_on">Service ON</string>
    <string name="ringtone_service">Ringtone Service</string>
    <string name="jsonparsing_using_volley">JsonParsing using Volley</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="enter_password">Enter password..</string>
    <string name="submit">Submit</string>
    <string name="jsonparsing_post_volley">JsonParsing POST Volley</string>
    <string name="get_volleydata">Get VolleyData</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_your_job">Enter your Job</string>
    <string name="close_contacts">Close Contacts</string>
    <string name="enter_amount">Enter amount</string>
    <string name="payment_gateway_integration_using_razorpay">Payment Gateway Integration using RazorPay</string>
    <string name="enter_the_amount_with_colon">Enter the Amount:</string>
    <string name="result_with_colon">Result:</string>
    <string name="new_payment">New Payment</string>
    <string name="open_camera">Open Camera</string>
    <string name="put_and_patch_request_using_retrofit">PUT and PATCH Request Using Retrofit</string>
    <string name="retrofit">Retrofit</string>
    <string name="list_view">List View</string>
    <string name="admob">AdMob</string>
    <string name="shared_preference">Shared Preference</string>
    <string name="kt_s_get_data_retrofit">Kt\'s GET_Data_Retrofit</string>
    <string name="mobileno">mobileNo</string>
    <string name="name">name</string>
    <string name="mvp_design_pattern">MVP Design Pattern</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password_mvp">Enter Password</string>
    <string name="login_mvp">Login</string>
    <string name="original_mvvm">Original MVVM</string>
    <string name="mvvm_space">MVVM Space</string>
    <string name="number_with_colon">Number:</string>
    <string name="name_with_colon">Name:</string>
    <string name="temperature_with_colon">Temperature:</string>
    <string name="temperature_unit_with_colon">Temperature Unit:</string>
    <string name="start_time_with_colon">Start Time:</string>
    <string name="end_time_with_colon">End Time:</string>
    <string name="author">Author:</string>
    <string name="android_charts">Android Charts</string>
    <string name="open_practice_place">Open Practice Place</string>
    <string name="open_weather">Open Weather</string>
    <string name="open_another_app">Open Another App</string>
    <string name="device_to_pc_tcp_sockets">Device To PC - TCP Sockets</string>
    <string name="navigation_component">Navigation Component</string>
    <string name="frag_to_frag_talks">Frag To Frag Talks</string>
    <string name="mvvm_design_pattern">MVVM Design Pattern</string>
    <string name="rxjava_rxandroid">RxJava_RxAndroid</string>
    <string name="mvp_design_pattern1">MVP Design Pattern</string>
    <string name="put_patch_delete_retrofit">PUT PATCH DELETE Retrofit</string>
    <string name="logout">Logout</string>
    <string name="view_pager1">View Pager</string>
    <string name="list_view1">List View</string>
    <string name="sqlite_db">SQLite DB</string>
    <string name="another_sqlite">Another SQLite</string>
    <string name="admob1">AdMob</string>
    <string name="video_player">Video Player</string>
    <string name="post_retrofit">Post Retrofit</string>
    <string name="google_maps1">Google Maps</string>
    <string name="open_camera1">Open Camera</string>
    <string name="shared_preference1">Shared Preference</string>
    <string name="ecommerce_rcylr_retro">Ecommerce Rcylr Retro</string>
    <string name="airlines_rcylr_retro">Airlines Rcylr Retro</string>
    <string name="complete_retrofit">Complete Retrofit</string>

    <!--Use &#160; for non-breakable whitespace.
    Use &#032; for regular space.-->

</resources>