<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_bckgrnd"
        android:backgroundTint="#7B979A"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_periodsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/number_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_periodsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_periodsNumber"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/name_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_periodsTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_periodsName"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/temperature_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_periodsTemperatureUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_periodsTemperature"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/temperature_unit_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_periodsStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_periodsTemperatureUnit"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/start_time_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_periodsEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_periodsStartTime"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/end_time_with_colon"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_weatherIcon"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/img_bckgrnd_1"
                app:civ_border_width="1dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>