<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Payment_Gateway_Activity">

    <TextView
        android:id="@+id/tv_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/payment_gateway_integration_using_razorpay"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/view_underline"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@id/tv_Heading"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_underline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato"
        android:text="@string/enter_the_amount_with_colon"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_frame"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_amount"
        android:fontFamily="@font/lato"
        android:layout_below="@id/tv_amount"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_payText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_payment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/result_with_colon"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/dialog_bckgrnd"
        android:fontFamily="@font/aclonica"
        android:padding="10dp"
        android:text="@string/new_payment"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>