<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Z_MVP_DesignPattern.MVP_Activity">

    <TextView
        android:id="@+id/tv_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/mvp_design_pattern"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <View
        android:id="@+id/view_underline"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@id/tv_Heading"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:background="@android:color/black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_underline"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/lato"
        android:hint="@string/enter_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/lato"
        android:hint="@string/enter_password_mvp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginbtn_bk"
        android:elevation="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_mvp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>