<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bckgrnd_2"
    tools:context=".Activities.SecndSQLiteActivity">

    <TableLayout
        android:id="@+id/tabLay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/headers_frame"
        android:backgroundTint="#91EDF8"
        android:stretchColumns="1,2,3,4">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/movie"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/details"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/imdb"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linLay_recyclerLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLay_main"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mvi_recyclerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:scrollbarSize="5dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            tools:listitem="@layout/row_item2" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_openMviBtmSht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E7A2FA"
        android:clickable="true"
        android:contentDescription="@string/click_me_to_add_movie_details"
        android:focusable="true"
        android:src="@drawable/add_location"
        app:fabSize="normal"
        app:rippleColor="@android:color/holo_green_light" />

</RelativeLayout>